2005-06-14  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl:
	Fix conversion from old color list for some unusual nicks.
	Fix changing own color.
	Only save nicks that have extra attributes stored.
	Fix a problem with new messages getting mixed into history when it is
		being reloaded.
	Add autoscroll when showing/hiding extended text entry.
	Selecting to be alerted now activates some defaults if none set.
	Alerts now work for the nickname currently being used as well as the
		username.
	Remove another old tile-ism.
	Convert ::tkchat::msgSend calls to use ::tkjabber::msgSend.
	Convert ::tkchat::errLog proc calls to use ::log::log.
	Removed some orhaned procs.
	Clean up a lot of whitespace at start and end of lines.

2005-06-07  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl: Save only changed colors and invisibility settings in
	rc file instead of all of them. Change the way color information is
	stored to avoid a problem if someone calls themselves 'MainFG' etc.

2005-05-26  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl: Fixed some elide problems with regard to entry/exit,
	online/away, system, error and singledot messages, as well as
	timestamps and emoticons. [Bug 978962]
	* tkchat.tcl: Removed use of tscale, missed by Patch 196561.

2005-05-21  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl: Corrected two oversights from last commit. Fixed
	multiline messages and initial history load times.

2005-05-17  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl: Convert all entry and exit messages to Traffic messages
	so they can be hidden with the 'Hide Entry/Exit Messages' menu.
	Factor out common code for parsing live and history messages.
	[Patch 1198196]
	* tkchat.tcl: Automatic cleanup of nicks in the .tkchatrc file that
	are older than 30 days. [Patch 1196567]
	* tkchat.tcl: Remove import of tile:: namespace now that we require
	Tile 0.5. [Patch 1196561]
